--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "@hodrobond-euler/monorepo",
+  "name": "@hodrobond/euler-monorepo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "jest",
-    "build": "lerna exec --parallel 'BABEL_ENV=build babel src --out-dir dist --source-maps --extensions .ts,.tsx --config-file ../../babel.config.js --delete-dir-on-start --no-comments'"
+    "build": "lerna exec --parallel 'BABEL_ENV=build babel src --out-dir dist --source-maps --extensions .ts,.tsx --config-file ../../babel.config.js --delete-dir-on-start --no-comments'",
+    "start": "lerna bootstrap && npm run build && npm run test"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Hodrobond/EulerTypescript.git"
   },
+  "files": [
+    "dist"
+  ],
   "author": "",
   "license": "ISC",
   "bugs": {
