--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,20 @@
 {
- "compilerOptions": {
-   "module": "commonjs",
-   "declaration": true,
-   "noImplicitAny": false,
-   "removeComments": true,
-   "noLib": false,
-   "emitDecoratorMetadata": true,
-   "inlineSourceMap": true,
-   "experimentalDecorators": true,
-   "target": "es6",
-   "sourceMap": true,
-   "lib": [
-     "es6"
-   ],
-   "baseUrl": "./packages"
- },
- "exclude": [
-   "node_modules",
-   "**/*.spec.ts"
- ]
+  "compilerOptions": {
+    "module": "ES6",
+    "composite": true,
+    "outDir": "./dist",
+    "rootDir": "src",
+    "declaration": true,
+    "noImplicitAny": true,
+    "esModuleInterop": true,
+    "module": "commonjs",
+    "target": "es6",
+    "lib": [ "es6" ]
+  },
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts",
+    "dist/**",
+    "**/test.ts"
+  ]
 }
