--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@types/node": "^14.0.23",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
-    "babel-cli": "^6.26.0",
     "babel-core": "^7.0.0-bridge.0",
     "eslint": "^7.4.0",
     "eslint-config-airbnb-base": "^14.2.0",
@@ -38,5 +37,8 @@
     "jest": "^26.1.0",
     "lerna": "^3.22.1",
     "typescript": "^3.9.7"
+  },
+  "resolutions": {
+    "babel-core": "^7.0.0-bridge.0"
   }
 }
