--- a/packages/0002/tsconfig.json
+++ b/packages/0002/tsconfig.json
@@ -2,10 +2,12 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "."
+    "rootDir": "src"
   },
   "exclude": [
     "node_modules",
-    "dist"
+    "**/*.test.ts",
+    "dist/**",
+    "__tests__"
   ]
 }
